--- a/Atualizado - Mambubike/mambubike-copy/assets/sobre.html
+++ b/Atualizado - Mambubike/mambubike-copy/assets/sobre.html
@@ -51,23 +51,23 @@
 			<div class="navbar-collapse d-flex justify-content-end" id="navbarText">
 				<ul class="navbar-nav container-nav-bar">
                     <li class="nav-item">
-						<a class="nav-link" href="../index.asp">Home</a>
+						<a class="nav-link" href="../index.html">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="sobre.asp">Sobre</a>
+						<a class="nav-link" href="sobre.html">Sobre</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="agenda.asp">Agenda</a>
+						<a class="nav-link" href="agenda.html">Agenda</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="participe.asp">Participe</a>
+						<a class="nav-link" href="participe.html">Participe</a>
 					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="bibliotecaDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Biblioteca</a>
 						<ul class="dropdown-menu" aria-labelledby="bibliotecaDropdown">
 							<li><a class="dropdown-item disabled" href="#">Glossário</a></li>
 							<li><a class="dropdown-item disabled" href="#">Relatórios</a></li>
-							<li><a class="dropdown-item" href="projeto.asp">Projeto</a></li>
+							<li><a class="dropdown-item" href="projeto.html">Projeto</a></li>
 							<li><a class="dropdown-item disabled" href="#">Galeria de fotos</a></li>
 						</ul>
 					</li>
