--- a/Atualizado - Mambubike/mambubike-copy/index.html
+++ b/Atualizado - Mambubike/mambubike-copy/index.html
@@ -102,20 +102,20 @@
 						<a class="nav-link" href="#">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="assets/sobre.asp">Sobre</a>
+						<a class="nav-link" href="assets/sobre.html">Sobre</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="assets/agenda.asp">Agenda</a>
+						<a class="nav-link" href="assets/agenda.html">Agenda</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="assets/participe.asp">Participe</a>
+						<a class="nav-link" href="assets/participe.html">Participe</a>
 					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle"  href="#" id="bibliotecaDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Biblioteca</a>
 						<ul class="dropdown-menu" aria-labelledby="bibliotecaDropdown">
 							<li><a class="dropdown-item disabled" href="#">Glossário</a></li>
 							<li><a class="dropdown-item disabled" href="#">Relatórios</a></li>
-							<li><a class="dropdown-item" href="assets/projeto.asp">Projeto</a></li>
+							<li><a class="dropdown-item" href="assets/projeto.html">Projeto</a></li>
 							<li><a class="dropdown-item disabled" href="#">Galeria de fotos</a></li>
 						</ul>
 					</li>
