--- a/Atualizado - Mambubike/mambubike-copy/assets/participe.html
+++ b/Atualizado - Mambubike/mambubike-copy/assets/participe.html
@@ -222,14 +222,10 @@ End If
 			</div>
 		</div>
 	</nav>
-	
-	<!-- Elemento de plano de fundo branco -->
-	<div id="background-overlay"></div>
-	
-	<header class="header-home" id="header">
-		<img src="../images/wallpaper-home.png" alt="" id="imagemLogo">
-	</header>
 
+	<header class="header-home" id="header">
+		<img src="images/mambubike-logo.svg" id="imagemLogo">
+	</header>
 	
 	<section class="nome-projeto">
 		<div class="container">
