--- a/Atualizado - Mambubike/mambubike-copy/index.html
+++ b/Atualizado - Mambubike/mambubike-copy/index.html
@@ -127,12 +127,9 @@
 			</div>
 		</div>
 	</nav>
-	
-	<!-- Elemento de plano de fundo branco -->
-	<div id="background-overlay"></div>
-	
+
 	<header class="header-home" id="header">
-		<img src="images/wallpaper-home.png" alt="" id="imagemLogo">
+		<img src="images/mambubike-logo.svg" id="imagemLogo">
 	</header>
 
 	<section class="nome-projeto">
