--- a/Atualizado - Mambubike/mambubike-copy/assets/projeto.html
+++ b/Atualizado - Mambubike/mambubike-copy/assets/projeto.html
@@ -79,7 +79,7 @@
 	</nav>
 	
 	<header class="header-home" id="header">
-		<img src="images/mambubike-logo.svg" id="imagemLogo">
+		<img src="../images/mambubike-logo.svg" id="imagemLogo">
 	</header>
 
 	<section class="nome-projeto">
