--- a/Atualizado - Mambubike/mambubike-copy/assets/agenda.html
+++ b/Atualizado - Mambubike/mambubike-copy/assets/agenda.html
@@ -82,7 +82,7 @@
 	<div id="background-overlay"></div>
 	
 	<header class="header-home" id="header">
-		<img src="images/mambubike-logo.svg" id="imagemLogo">
+		<img src="../images/mambubike-logo.svg" id="imagemLogo">
 	</header>
 
 	<section class="nome-projeto">
