--- a/Atualizado - Mambubike/mambubike-copy/assets/participe.html
+++ b/Atualizado - Mambubike/mambubike-copy/assets/participe.html
@@ -224,7 +224,7 @@ End If
 	</nav>
 
 	<header class="header-home" id="header">
-		<img src="images/mambubike-logo.svg" id="imagemLogo">
+		<img src="../images/mambubike-logo.svg" id="imagemLogo">
 	</header>
 	
 	<section class="nome-projeto">
