--- a/Atualizado - Mambubike/mambubike-copy/assets/contato.html
+++ b/Atualizado - Mambubike/mambubike-copy/assets/contato.html
@@ -31,7 +31,6 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">	
 		<!-- Style -->
 		<link href="../style.css" rel="stylesheet" type="text/css">
-		<link rel="stylesheet" href="sobre.css">
 
         <!-- Animação Reveal -->
         <script src="https://unpkg.com/scrollreveal"></script>
@@ -63,7 +62,7 @@
 						<a class="nav-link" href="participe.html">Participe</a>
 					</li>
 					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="" id="bibliotecaDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Biblioteca</a>
+						<a class="nav-link dropdown-toggle" href="#" id="bibliotecaDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Biblioteca</a>
 						<ul class="dropdown-menu" aria-labelledby="bibliotecaDropdown">
 							<li><a class="dropdown-item disabled" href="#">Glossário</a></li>
 							<li><a class="dropdown-item disabled" href="#">Relatórios</a></li>
@@ -78,7 +77,10 @@
 			</div>
 		</div>
 	</nav>
-
+	
+	<!-- Elemento de plano de fundo branco -->
+	<div id="background-overlay"></div>
+	
 	<header class="header-home" id="header">
 		<img src="../images/mambubike-logo.svg" id="imagemLogo">
 	</header>
@@ -92,37 +94,8 @@
 			</div>
 		</div>
 	</section>
-	
-	<section class="sobre" style="background-color: #F0F2F5;">
-        <div class="container py-5 text-center">
-			<div class="moldura">
-				<h3 class="fw-bold mb-4 card-title-bottom text-uppercase"> Sobre o Projeto Mambubike </h3>
-				<p>
-					Atualmente, a utilização da bicicleta como modal de transporte dentro do bairro ocorre de forma intensa e espontânea, porém sem infraestrutura ou sinalização adequadas. Dessa forma, o projeto surge para proporcionar segurança e conforto para os usuários a fim de atender além da demanda atual, já bastante significativa, criar condições para atrair a demanda reprimida.
-				</p>
-				<br>
-				<p>
-					O projeto do sistema cicloviário é composto por ciclorrotas, ciclofaixas, paraciclos e sinalização vertical e horizontal. Além disso, o projeto também prevê ações de participação social e atividades educativas antes, durante e após a sua implementação.
-				</p>
-				<br>
-				<p>
-					O MambuBike é um projeto da Prefeitura Municipal de Angra dos Reis para o Parque Mambucaba, por meio da Secretaria Executiva de Ordem Pública e Mobilidade Urbana e da Secretaria de Desenvolvimento Regional, realizado com apoio da Iniciativa Mobilidade em Transformação, desenvolvida pela Cidade Ativa e Fundação Grupo Volkswagen.
-				</p>
-				<br>
-				<p>
-					A Cidade Ativa é uma organização social que atua por cidades mais acolhedoras, resilientes e saudáveis. A organização se orienta pela observação atenta de espaços e escuta sensível de pessoas, resultando na cocriação de estratégias, políticas, planos e projetos urbanos que transformam cidades em lugares mais inclusivos e com maior qualidade de vida. A Cidade Ativa atua desde 2014 para que todas as pessoas possam ter melhores condições de vida, com garantia de acesso a espaços qualificados e serviços públicos.
-				</p>
-				<br>
-				<p>
-					A Fundação Grupo Volkswagen desenvolve iniciativas sociais e educacionais desde 1979, com mais de 3 milhões de brasileiros já beneficiados, dos quais 112 mil foram apenas em 2022. A missão do FGVW é promover transformações positivas que impulsionem melhorias na educação e que mobilizem cidadãos para atuarem como protagonistas do desenvolvimento sustentável de comunidades. Atualmente, suas causas prioritárias são mobilidade urbana e comunidades sustentáveis, mobilidade social e inclusão.
-				</p>
-				<br>
-				<p>
-					Em sua fase piloto, o projeto contou com uma ação de apoio, em forma de assistência técnica, promovida pela Iniciativa Mobilidade em Transformação e com a parceria da Zoom Urbanismo Arquitetura e Design.
-				</p>
-			</div>
-        </div>
-    </section>
+
+    
 
 	<div class="container-seta">
 		<a href="#" class="seta-up" id="linkSetaUp"><img src="../icon/seta-up.svg" alt="" srcset=""></a>
