--- a/Atualizado - Mambubike/mambubike-copy/assets/participe.html
+++ b/Atualizado - Mambubike/mambubike-copy/assets/participe.html
@@ -216,7 +216,7 @@ End If
 						</ul>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Contato</a>
+						<a class="nav-link" href="contato.html">Contato</a>
 					</li>
 				</ul>
 			</div>
