--- a/Atualizado - Mambubike/mambubike-copy/assets/contato.html
+++ b/Atualizado - Mambubike/mambubike-copy/assets/contato.html
@@ -95,13 +95,44 @@
 		</div>
 	</section>
 
-    
+	<section class="contact" id="contact">
+		<div class="container">
+			<h3>Formulário de contato</h3>
+			<p>Envie sua contribuição, dúvida, crítica ou sugestão.</p>
+			<div class="row">
+				<div class="col-md-6">
+					<form>
+						<div class="mb-3">
+							<input type="text" class="form-control" placeholder="Seu nome">
+						</div>
+						<div class="mb-3">
+							<input type="email" class="form-control" placeholder="Seu e-mail">
+						</div>
+						<div class="mb-3">
+							<input type="tel" class="form-control" placeholder="Seu telefone" id="telefone">
+						</div>
+					</form>
+				</div>
+				<div class="col-md-6">
+					<div class="mb-3">
+						<textarea class="form-control" rows="5" placeholder="Sua mensagem"></textarea>
+					</div>
+					<div class="mb-3">
+						<button class="btn btn-contato" type="submit">Enviar mensagem</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
 	<div class="container-seta">
 		<a href="#" class="seta-up" id="linkSetaUp"><img src="../icon/seta-up.svg" alt="" srcset=""></a>
 	</div> 
 
+	
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.6/jquery.inputmask.min.js"></script>
+
 	<script src="../scripts.js"></script>
 	<script src="https://plugin.handtalk.me/web/latest/handtalk.min.js"></script>
 	<script>
