--- a/Atualizado - Mambubike/mambubike-copy/assets/contato.html
+++ b/Atualizado - Mambubike/mambubike-copy/assets/contato.html
@@ -62,7 +62,7 @@
 						<a class="nav-link" href="participe.html">Participe</a>
 					</li>
 					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="bibliotecaDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Biblioteca</a>
+						<a class="nav-link dropdown-toggle" href="" id="bibliotecaDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Biblioteca</a>
 						<ul class="dropdown-menu" aria-labelledby="bibliotecaDropdown">
 							<li><a class="dropdown-item disabled" href="#">Glossário</a></li>
 							<li><a class="dropdown-item disabled" href="#">Relatórios</a></li>
