--- a/Atualizado - Mambubike/mambubike-copy/index.html
+++ b/Atualizado - Mambubike/mambubike-copy/index.html
@@ -121,7 +121,7 @@
 					</li>
 					
 					<li class="nav-item">
-						<a class="nav-link" href="#">Contato</a>
+						<a class="nav-link" href="assets/contato.html">Contato</a>
 					</li>
 				</ul>
 			</div>
