--- a/Atualizado - Mambubike/mambubike-copy/assets/projeto.html
+++ b/Atualizado - Mambubike/mambubike-copy/assets/projeto.html
@@ -97,8 +97,7 @@
             <div class="main-timeline-2">
                 <div class="timeline-2 left-2 animacao hidden card-box-left">
                     <div class="card">
-                    <img src="../images/projetos/ciclofaixa.png" class="card-img-top "
-                        alt="Responsive image">
+					<div class="imagem-card" style="background-image: url(../images/projetos/ciclofaixa.png);"></div>
                     <div class="card-body p-4">
                         <h4 class="fw-bold mb-4 card-itens-left">Ciclofaixa</h4>
                         <p class="mb-0 card-itens-left">Faixa exclusiva para bicicleta localizada junto à via, separada dos demais veículos por pintura de piso, tachões e balizadores.</p>
@@ -109,8 +108,7 @@
                 
                 <div class="timeline-2 right-2 card-box-right">
                     <div class="card">
-                    <img src="../images/projetos/ciclorrota.png" class="card-img-top"
-                        alt="Responsive image">
+					<div class="imagem-card" style="background-image: url(../images/projetos/ciclorrota.png);"></div>
                     <div class="card-body p-4">
                         <h4 class="fw-bold mb-4">Ciclorrota</h4>
                         <p class="mb-0">Indicação de compartilhamento de via com veículos motorizados, com preferência para os ciclistas.</p>
@@ -121,8 +119,7 @@
 
 				<div class="timeline-2 left-2 animacao hidden card-box-left">
                     <div class="card">
-                    <img src="../images/projetos/faixa-multiuso.png" class="card-img-top "
-                        alt="Responsive image">
+					<div class="imagem-card" style="background-image: url(../images/projetos/faixa-multiuso.png);"></div>
                     <div class="card-body p-4">
                         <h4 class="fw-bold mb-4">Faixa multiuso</h4>
                         <p class="mb-0">Área delimitada que pode servir a diversos usos, dependendo da situação. 
@@ -133,8 +130,7 @@
 
 				<div class="timeline-2 right-2 card-box-right">
                     <div class="card">
-                    <img src="../images/projetos/calcadas-e-travessias.png" class="card-img-top"
-                        alt="Responsive image">
+					<div class="imagem-card" style="background-image: url(../images/projetos/calcadas-e-travessias.png);"></div>
                     <div class="card-body p-4">
                         <h4 class="fw-bold mb-4">Calçadas e travessias</h4>
                         <p class="mb-0 card-itens-left">Requalificação das travessias da área do projeto piloto, com pintura de faixas de pedestres,
@@ -145,8 +141,7 @@
 
 				<div class="timeline-2 left-2 animacao hidden card-box-left">
                     <div class="card">
-                    <img src="../images/projetos/projetos-especiais.png" class="card-img-top "
-                        alt="Responsive image">
+					<div class="imagem-card" style="background-image: url(../images/projetos/projetos-especiais.png);"></div>
                     <div class="card-body p-4">
                         <h4 class="fw-bold mb-4">Projetos especiais</h4>
                         <p class="mb-0">Frentes de escolas, equipamentos públicos e pontos de intermodalidade, 
