--- a/Atualizado - Mambubike/mambubike-copy/assets/contato.html
+++ b/Atualizado - Mambubike/mambubike-copy/assets/contato.html
@@ -18,6 +18,9 @@
 		<meta property="og:description" content="Mobilidade urbana para estruturação do sistema cicloviário no bairro Parque Mambucaba, em Angra dos Reis." />
 		<meta property="og:locale" content="pt_BR">
 
+		<!-- CSS -->
+		<link rel="stylesheet" href="contato.css">
+
 		<!-- Favicon -->
 		<link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
@@ -96,29 +99,31 @@
 	</section>
 
 	<section class="contact" id="contact">
-		<div class="container">
-			<h3>Formulário de contato</h3>
-			<p>Envie sua contribuição, dúvida, crítica ou sugestão.</p>
-			<div class="row">
-				<div class="col-md-6">
-					<form>
-						<div class="mb-3">
-							<input type="text" class="form-control" placeholder="Seu nome">
-						</div>
-						<div class="mb-3">
-							<input type="email" class="form-control" placeholder="Seu e-mail">
-						</div>
-						<div class="mb-3">
-							<input type="tel" class="form-control" placeholder="Seu telefone" id="telefone">
-						</div>
-					</form>
-				</div>
-				<div class="col-md-6">
-					<div class="mb-3">
-						<textarea class="form-control" rows="5" placeholder="Sua mensagem"></textarea>
+		<div class="moldura">
+			<div class="container">
+				<h3>Formulário de contato</h3>
+				<p>Envie sua contribuição, dúvida, crítica ou sugestão.</p>
+				<div class="row">
+					<div class="col-md-6">
+						<form>
+							<div class="mb-3">
+								<input type="text" class="form-control" placeholder="Seu nome">
+							</div>
+							<div class="mb-3">
+								<input type="email" class="form-control" placeholder="Seu e-mail">
+							</div>
+							<div class="mb-3">
+								<input type="tel" class="form-control" placeholder="Seu telefone" id="telefone">
+							</div>
+						</form>
 					</div>
-					<div class="mb-3">
-						<button class="btn btn-contato" type="submit">Enviar mensagem</button>
+					<div class="col-md-6">
+						<div class="mb-3">
+							<textarea class="form-control" rows="5" placeholder="Sua mensagem"></textarea>
+						</div>
+						<div class="mb-3">
+							<button class="btn btn-contato botao" type="submit">Enviar mensagem</button>
+						</div>
 					</div>
 				</div>
 			</div>
