--- a/Atualizado - Mambubike/assets/projeto.html
+++ b/Atualizado - Mambubike/assets/projeto.html
@@ -50,16 +50,16 @@
 			<div class="navbar-collapse d-flex justify-content-end" id="navbarText">
 				<ul class="navbar-nav container-nav-bar">
                     <li class="nav-item">
-						<a class="nav-link" href="../index.asp">Home</a>
+						<a class="nav-link" href="../index.html">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="sobre.asp">Sobre</a>
+						<a class="nav-link" href="sobre.html">Sobre</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link disabled" href="agenda.asp">Agenda</a>
+						<a class="nav-link disabled" href="agenda.html">Agenda</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="participe.asp">Participe</a>
+						<a class="nav-link" href="participe.html">Participe</a>
 					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="" id="bibliotecaDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Biblioteca</a>
@@ -71,7 +71,7 @@
 						</ul>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="contato.asp">Contato</a>
+						<a class="nav-link" href="contato.html">Contato</a>
 					</li>
 				</ul>
 			</div>
